--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,8 +3,8 @@ html,body{width:100%;height:100%;}
 body{
 	min-width:1024px;
 	position:relative;
-	background-color:#FFF;
-	font:12px/18px Arial,Tahoma,Geneva,sans-serif;
+	background-color:#1B1F2E;
+	font:13px/18px "Calibri",Verdana,Arial,sans-serif;
 	color:#919090;
 }
 *,form{padding:0;margin:0;}
@@ -14,33 +14,169 @@ a{outline:none 0;outline-color: inherit;cursor:pointer;text-decoration:none;}
 a:hover{text-decoration:underline}
 .hide{display:none !important;}
 
+/* ********************** MAIN ***************************** */
+#wrapper{
+	display:block;
+	width:1000px;
+	height:10px;
+	margin:0 auto;
+	float:none;
+}
 /* ********************** HEADER ***************************** */
 header{
 	display:block;
 	width:100%;
-	min-width:1024px;
-	height:80px;
-	padding-top:19px;
-	background-color:#FFF;
+	height:100px;
+	background-color:#2D2F3B;
 	text-align:center;
 	vertical-align:top;
+}
+#logoarea{
+	display:block;
+	width:40%;
+	padding-top:35px;
+	padding-left:35px;
+	padding-bottom:32px;
 	float:left;
 }
+#logoarea a{
+	display:block;
+	width:209px;
+	height:33px;
+}
 
+#search-form{
+	display:block;
+	width:40%;
+	height:30px;
+	padding-top:6px;
+	padding-right:34px;
+	text-align:right;
+	float:right;
+}
+#search-form input{
+	display:inline-block;
+	width:150px;
+	padding:2px;
+	font-size:12px;
+	color:#CCCCCC;
+	background-color:#393b48;
+	border:1px solid #8088A3;
+}
+#search-form button{
+	display:inline-block;
+	font-size:12px;
+	border:0;
+	color:#8088A3;
+	background-color:#2D2F3B;
+	cursor:pointer;
+}
+#search-form button:hover{
+	color:#CCC;
+}
 
+#menu{
+	display:block;
+	width:auto;
+	padding-right:32px;
+	float:right;
+}
+#menu #nav-menu{
+	list-style:none inside none;
+	text-align:right;
+	display:-webkit-box;
+	display:flex;
+}
+#menu #nav-menu li{
+	display:block;
+	margin:0 4px;
+	justify-content:flex-end;
+}
+#menu #nav-menu a{
+	display:inline-block;
+	padding:7px 18px;
+	line-height:1;
+	color:#8088A3;
+	border:1px solid #8088A3;
+	border-radius:6px 6px 6px 6px;
+	font-size:1.13em;
+	text-decoration:none;
+}
+#menu #nav-menu li#nav-signup a{
+	color:#F16C65;
+	border:1px solid #F16C65;
+}
+
+#menu #nav-menu li a:hover,
+#menu #nav-menu li.active a{
+	color:#FFFFFF !important;
+	border:1px solid #FFFFFF !important;
+	text-decoration:none;
+}
+
+#menu #nav-menu li#nav-profile a{
+	line-height:1.4 !important;
+	color:#F16C65;
+	border:0 !important;
+}
+#menu #nav-menu li#nav-profile a img{
+	position:relative;
+	top:-5px;
+	margin-right:10px;
+	float:left;
+}
+#menu #nav-menu li#nav-profile a:hover{
+	text-decoration:underline;
+}
 /* ********************** CONTENT ***************************** */
 section.contentblock{
 	display:block;
 	width:100%;
-	min-width:1024px;
-	height:80px;
-	padding-top:19px;
+	min-width:1000px;
+	min-height:270px;
 	background-color:#FFF;
 	text-align:center;
 	vertical-align:top;
-	float:left;
 }
 
+.errormsg{
+	padding:10px;
+	margin-bottom:10px;
+	color:red;
+	font-size:1.13em;
+	border:1px solid #FFFFFF !important;
+	border-radius:6px 6px 6px 6px;
+	text-align:left;
+}
+
+.backmsg{
+	padding:10px;
+	margin-bottom:10px;
+	color:greenyellow;
+	font-size:1.13em;
+	border:1px solid #FFFFFF !important;
+	border-radius:6px 6px 6px 6px;
+	text-align:left;
+}
+.backmsg a{
+	color:#FFF;
+}
 
 /* ********************** FOOTER ***************************** */
-
+footer{
+	display:block;
+	width:100%;
+	min-width:1000px;
+	height:62px;
+	padding-top:38px;
+	font-size:1.13em;
+	color:#676B80;
+	background-color:#2D2F3B;
+}
+footer p{
+	color:#676B80;
+	padding-left:35px;
+}
+footer p a{
+	color:#676B80;
+}
