--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -128,6 +128,11 @@ header{
 #menu #nav-menu li#nav-profile a:hover{
 	text-decoration:underline;
 }
+#menu #nav-menu li#nav-myalbums a{
+	line-height:1.4 !important;
+	color:#F16C65;
+	border:0 !important;
+}
 /* ********************** CONTENT ***************************** */
 section.contentblock{
 	display:block;
@@ -160,6 +165,49 @@ section.contentblock{
 }
 .backmsg a{
 	color:#FFF;
+}
+
+
+form.frm{
+	display:block;
+	width:100%;
+	min-height:150px;
+	padding-top:20px;
+}
+
+form.frm p{
+	display:block;
+	width:100%;
+	padding-bottom:10px;
+}
+form.frm p input{
+	display:inline-block;
+	width:210px;
+	padding:8px 11px;
+	margin-right:18px;
+	color:#FAB4B0;
+	border:0;
+	border-radius:5px 5px 5px 5px;
+	background-color:#d75650;
+	font-size:1.1em;
+}
+::-webkit-input-placeholder{color:#FAB4B0;opacity:1;}
+:-moz-placeholder{color:#FAB4B0;opacity:1;}
+::-moz-placeholder{color:#FAB4B0;opacity:1;}
+:-ms-input-placeholder{color:#FAB4B0;opacity:1;}
+
+form.frm p button{
+	display:inline-block;
+	padding:7px 18px;
+	line-height:1;
+	margin-top:12px;
+	color:#FFFFFF;
+	border:1px solid #FFFFFF;
+	border-radius:6px 6px 6px 6px;
+	background-color:#F16C65;
+	font-size:1.13em;
+	text-decoration:none;
+	cursor:pointer;
 }
 
 /* ********************** FOOTER ***************************** */
