--- a/assets/css/public.css
+++ b/assets/css/public.css
@@ -1,6 +1,7 @@
 #publicphotos{
 	width:965px;
 	padding:29px 0 29px 35px;
+
 }
 #publicphotos h1{
 	display:block;
@@ -58,4 +59,159 @@
 	text-align:left;
 	font-size:0.9em;
 	color:#6A738F;
+}
+
+/* ***************** VIEW PHOTOS ************************ */
+
+#viewphoto{
+	width:965px;
+	padding:29px 0 29px 35px;
+}
+#viewphoto h1.viewphoto-album-name{
+	display:block;
+	width:100%;
+	height:60px;
+	line-height:1;
+	color:#6A738F;
+	text-align:left;
+	font-size:1.86em;
+	font-weight:normal;
+}
+#viewphoto h1.viewphoto-album-name a{
+	color:#6A738F;
+	font-size:1.86em;
+	font-weight:normal;
+	text-decoration:none;
+}
+#viewphoto h2.viewphoto-username{
+	display:block;
+	width:100%;
+	height:30px;
+	color:#2d2f3b;
+	text-align:left;
+	font-size:1.13em;
+	font-weight:normal;
+}
+#viewphoto h2.viewphoto-username img{
+	display:block;
+	width:20px;
+	height:19px;
+	margin-right:10px;
+	float:left;
+}
+#view-photo-blk{
+	width:930px;
+	height:605px;
+	background-color:#CFCFD4;
+}
+#view-photo-blk a{
+	display:block;
+	width:63px;
+	height:588px;
+	background-color:#CFCFD4;
+}
+#p-photos-block-arr-left{
+	background:#CFCFD4 url(/assets/img/big_arr_left.jpg) no-repeat center center;
+	float:left;
+}
+#view-photo-blk img{
+	display:block;
+	width:784px;
+	height:588px;
+	border:8px solid #B6B7BF;
+	float:left;
+}
+#p-photos-block-arr-right{
+	background:#CFCFD4 url(/assets/img/big_arr_right.jpg) no-repeat center center;
+	float:right;
+}
+h2#p-photo-name{
+	display:block;
+	width:100%;
+	height:60px;
+	padding-top:10px;
+	line-height:1;
+	color:#6A738F;
+	text-align:left;
+	font-size:1.86em;
+	font-weight:normal;
+}
+
+/* ******************* ALBUMS ******************* */
+#albums-blk{
+	width:965px;
+	padding:29px 0 29px 35px;
+
+}
+#albums-blk h2{
+	display:block;
+	width:100%;
+	height:20px;
+	color:#6A738F;
+	text-align:left;
+}
+#albums-blk #albums-blk-items{
+	display:block;
+	width:100%;
+	padding-top:10px;
+	display:-webkit-flex;
+	display:flex;
+	-webkit-flex-wrap:wrap;
+	flex-wrap:wrap;
+}
+.album-block{
+	width:220px;
+	height:220px;
+	border-right:17px solid #FFF;
+	border-bottom:16px solid #FFF;
+	background-color:#CBCBD0;
+}
+
+.album-block a.aimgi{
+	display:block;
+	width:204px;
+	height:153px;
+	padding:8px;
+	background-color:#B6B7BF;
+}
+.album-block a.aimgi:hover{
+	background-color:#F16C65;
+}
+
+/* ******************* INSIDE ALBUM ******************* */
+#view-album{
+	width:965px;
+	padding:29px 0 29px 35px;
+}
+#view-album-username{
+	display:block;
+	width:100%;
+	height:30px;
+	color:#2d2f3b;
+	text-align:left;
+	font-size:1.13em;
+	font-weight:normal;
+}
+#view-album-username img{
+	display:block;
+	width:20px;
+	height:19px;
+	margin-right:10px;
+	float:left;
+}
+#view-album-blk{
+	width:930px;
+	height:605px;
+	background-color:#CFCFD4;
+}
+#view-album-block{
+
+}
+
+#view-album-block img{
+	display:block;
+	width:930px;
+	height:697px;
+	border:8px solid #B6B7BF;
+	float:left;
 }
