--- a/assets/css/public.css
+++ b/assets/css/public.css
@@ -218,24 +218,25 @@ h2#p-photo-name{
 
 #comment-block{
     background-color:#CFCFD4;
-    width:830px;
-    height:500px;
+    width:730px;
+    height:300px;
     margin:10px 0 40px 80px;
 }
 
 #comment-text{
-    margin:20px auto 0 auto;
-    width:600px;
-    height: 50px;
+    margin:10px auto 0 auto;
+    width:300px;
+    height: 80px;
 }
 #comment-button{
-    width:130px;
-    height:52px;
-    position:relative;
-    float:right;
-    top:20px;
-    right:40px;
+    width:300px;
+    height:30px;
     background: #FFF;
     border:1px solid black;
     font-weight:bold;
+}
+#comment-uname{
+    margin-top:20px;
+    width:300px;
+    height:25px;
 }
