--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,11 +1,11 @@
 @charset "utf-8";
 html,body{width:100%;height:100%;}
 body{
-	min-width:1024px;
+	min-width:960px;
 	position:relative;
-	background-color:#FFF;
-	font:13px/18px Arial,Tahoma,Geneva,sans-serif;
-	color:#474747;
+	background-color:#1B1F2E;
+	font:13px/18px "Calibri",Verdana,Arial,sans-serif;
+	color:#FFFFFF;
 }
 *,form{padding:0;margin:0;}
 img{margin-left:0;padding:0 !important;border:0;}
@@ -26,8 +26,66 @@ a:hover{text-decoration:underline}
 	padding-bottom:20px;
 }
 
-header{
+/* ********************** CONTENTS ***************************** */
+#admin-wrapper{
+	display:block;
+	width:100%;
+	min-width:960px;
+	min-height:300px;
+	float:left;
+}
+aside#menu{
+	display:block;
+	width:197px;
+	min-height:300px;
+	padding-left:10px;
+	padding-top:10px;
+	float:left;
+}
+aside#menu a{
+	display:block;
+	width:170px;
+	line-height:35px;
+	margin-bottom:10px;
+	padding-left:15px;
+	font-size: 1.13em;
+	color:#8088a3;
+	background-color:#2D2F3B;
+	border:1px solid #8088a3;
+	border-radius: 6px;
+	text-align:left;
+	text-decoration:none;
+	float:left;
+}
+aside#menu a:hover,
+aside#menu a.active{
+	color:#FFFFFF;
+}
 
+#admin-content{
+	display:block;
+	width:670px;
+	min-height:350px;
+	padding-left:10px;
+	padding-top:10px;
+	border-left:1px solid #8088a3;
+	float:left;
+}
+h1#admin-content-title{
+	display:block;
+	width:670px;
+	min-height:20px;
+	line-height:1.0;
+	border-bottom:1px solid #8088a3;
+	font-size:1.13em;
+	float:left;
+}
+#admin-content-in{
+	display:Block;
+	width:670px;
+	min-height:250px;
+	padding-top:10px;
+	float:left;
 }
 
 /* ********************** OTHER ***************************** */
@@ -40,7 +98,7 @@ header{
 	width:auto;
 	padding-left:5px;
 	padding-right:5px;
-	padding-top:2px;
+	padding-top:1px;
 	font-size:1em;
 	font-family:"Myriad Pro",Verdana,Arial,Sans-serif;
 	border:1px solid #474747;
@@ -51,7 +109,7 @@ header{
 	cursor:pointer;
 }
 .btn:hover{
-	color:#B92B92;
+	color:#F16C65;
 }
 .btn:active{
 	box-shadow:inset 1px 1px 2px #838383;
@@ -103,4 +161,25 @@ header{
 	line-height:22px;
 	background: #FFF no-repeat 2px 4px;
 	float:left;
+}
+
+/* *********************** USERS ADMINISTRATON **************************** */
+
+#userslist{
+	width:100%;
+	border-collapse: collapse;
+}
+#userslist th{
+	padding-left:10px;
+	text-align:left;
+}
+#userslist td{
+	padding:1px;
+	padding-left:10px;
+	text-align:left;
+}
+#userslist td input[type=checkbox]{
+	cursor:pointer;
+	width:15px;
+	height:15px;
 }
