--- a/assets/css/public.css
+++ b/assets/css/public.css
@@ -348,30 +348,33 @@ h2#p-photo-name{
 	width:300px;
 	margin:0 auto;
 }
-#connect{
-	float:right;
-	display:inline-block;
-	margin-right:30px;
+
+/* *********************** SEARCH AREA *********************** */
+
+#search-results{
+	width:965px;
+	padding:29px 0 29px 35px;
 }
-#connect a{
-	background:url(/assets/img/icons.png) no-repeat;
-	display:inline-block;
-	height:30px;
-	width:30px;
-	margin:0 10px;
+#search-results-albums{
+	display:block;
+	width:100%;
+	padding-bottom:50px;
 }
-#connect a.googleplus{
-	background-position:0 -40px;
+#search-results-albums h1.search-results-title,
+#search-results-photos h1.search-results-title{
+	display:block;
+	width:100%;
+	height:20px;
+	padding-bottom:8px;
+	color:#6A738F;
+	text-align:left;
 }
-#connect a.twitter{
-	background-position:0 -80px;
-}
-#connect a.facebook:hover{
-	background-position:-40px 0;
-}
-#connect a.googleplus:hover{
-	background-position:-40px -40px;
-}
-#connect a.twitter:hover{
-	background-position:-40px -80px;
+.search-results-items{
+	display: flex;
+	width: 100%;
+	padding-top: 10px;
+	display:-webkit-flex;
+	display:flex;
+	-webkit-flex-wrap:wrap;
+	flex-wrap:wrap;
 }
