--- a/assets/css/public.css
+++ b/assets/css/public.css
@@ -70,24 +70,22 @@
 /* ***************** VIEW PHOTOS ************************ */
 
 #viewphoto{
-	width:965px;
-	padding:29px 0 29px 35px;
+	width:100%;	
+	padding-top:1rem;	
 }
 
 #viewphoto h1.viewphoto-album-name{
 	display:block;
-	width:100%;
-	height:60px;
-	line-height:1;
+	width:100%;	
+	line-height:4rem;
+	margin-left:2rem;
 	color:#6A738F;
-	text-align:left;
-	font-size:1.86em;
-	font-weight:normal;
+	text-align:left;		
 }
 
 #viewphoto h1.viewphoto-album-name a{
 	color:#6A738F;
-	font-size:1.86em;
+	font-size:1.86em;	
 	font-weight:normal;
 	text-decoration:none;
 }
@@ -96,6 +94,7 @@
 	display:block;
 	width:100%;
 	height:30px;
+	margin-left:2rem;
 	color:#2d2f3b;
 	text-align:left;
 	font-size:1.13em;
@@ -103,7 +102,7 @@
 }
 
 #viewphoto h2.viewphoto-username img{
-	display:block;
+	display:block;	
 	width:20px;
 	height:19px;
 	margin-right:10px;
@@ -111,6 +110,7 @@
 }
 
 #view-photo-blk{
+	margin-left:2rem;
 	width:930px;
 	height:605px;
 	background-color:#CFCFD4;
@@ -142,6 +142,7 @@
 }
 
 h2#p-photo-name{
+	margin-left:2rem;
 	display:block;
 	width:100%;
 	height:60px;
@@ -257,21 +258,23 @@ h2#p-photo-name{
 	width:220px;
 	height:165px;
 }
-
+/* ******************* COMMENT BLOCK ******************* */
 #comment-block{
-	background-color:#d75650;
-	width:430px;
-	height:400px;
-	margin:20px 0 30px 240px;
-	text-align:center;
-	border-radius:5px;
+	background-color:#F16C65;
+	width:100%;
+	height:auto;
+	margin:0;
+	box-sizing:border-box;
+	padding:2rem 1rem;
+	text-align:center;	
 }
-#comment-block-title{
-	padding-top:10px;
+h2#comment-block-title{
+	color:#FFF;
+	font-size:1.5rem;	
 }
 #comment-block p{
 	display:block;
-	width:80%;
+	width:90%;
 	min-height:20px;
 	padding-bottom:10px;
 	margin:0 auto;
@@ -280,14 +283,23 @@ h2#p-photo-name{
 
 #comment-text{
 	width:100%;
-	height:200px;
-	padding:2px;
-	border-radius:5px;
-	border:1px solid #000000;
+	height:180px;
+	padding:0.5rem;	
+	width: 100%;	
+	color: #FAB4B0;
+	border: 0;
+	border-radius: 5px;
+	background-color: #d75650;
+	font-size: 1.3em;
+	font-family:inherit;
+	max-width:860px;	
 }
 
 #comment-block p.captcha{
-	height:30px;
+	width:90%;
+	box-sizing:border-box;
+	padding:0;
+	margin-left:3.3rem;
 }
 #comment-block p.captcha label{
 	display:block;
@@ -301,45 +313,72 @@ h2#p-photo-name{
 }
 #comment-block p.captcha img{
 	display:block;
-	margin-right:15px;
+	margin-right:1rem;
 	float:left;
+	border:2px solid white;
+	border-radius:5px;
 }
 #comment-block p.captcha input{
 	display:block;
-	width:80px;
-	padding:3px;
+	width:120px;	
 	font-size:1.13em;
 	float:left;
+	padding: 8px 11px;
+	margin:0;	
+	color: #FAB4B0;
+	border: 0;
+	border-radius: 5px;
+	background-color: #d75650;
 }
 
-#comment-button{
-	width:100%;
-	height:30px;
-	background:#FFF;
-	border:1px solid black;
-	font-weight:bold;
-	border-radius:5px;
+#comment-button{	
+	float:right;
+	box-sizing:border-box;
+	font-weight:bold;	
+	display: inline-block;
+	padding: 7px 30px;
+	line-height: 1;	
+	color: #FFFFFF;
+	border: 1px solid #FFFFFF;
+	border-radius: 6px;
+	background-color: #F16C65;
+	font-size: 1.4em;	
+	cursor: pointer;
+	margin:0;
+	opacity:0.7;
 }
+#comment-button:hover{
+	opacity:1;
+	}
 
 #comment-uname{
-	margin-top:20px;
-	width:300px;
-	height:25px;
-	border-radius:5px;
-	border:1px solid #000000;
+	display: inline-block;
+	width: 100%;
+	margin-top:1rem;
+	padding: 8px 11px;	
+	color: #FAB4B0;
+	border: 0;
+	border-radius: 5px;
+	background-color: #d75650;
+	font-size: 1.2em;	
+	max-width:855px;
 }
 
 #comment-list{
 	display:block;
-	width:600px;
+	width:100%;
 	padding-bottom:20px;
-	margin:0 auto;
+	margin:0 auto;	
 }
 
 #comment-list .full-comment{
 	display:block;
 	width:100%;
-	margin-bottom:15px;
+	margin:0.5rem 0;
+	border-bottom:1px solid #eee;
+	text-align:left;
+	padding:0.5rem 4rem;
+	box-sizing:border-box;
 }
 #comment-list .full-comment-name{
 	display:block;
@@ -355,8 +394,8 @@ h2#p-photo-name{
 	color:#FAB4B0;
 }
 #comment-list .full-comment-comment{
-	width:300px;
-	margin:0 auto;
+	width:500px;
+	font-size:1rem;	
 }
 
 /* *********************** SEARCH AREA *********************** */
