--- a/assets/css/public.css
+++ b/assets/css/public.css
@@ -197,13 +197,37 @@ h2#p-photo-name{
 .album-block a.aimgi:hover{
 	background-color:#F16C65;
 }
-
-#like{
-	background:url(../images/like_it.jpg) left center no-repeat;
-}
-#dislike{
-	background:url(../images/dont_like.jpg) left center no-repeat;
-}
+ #like, #dislike{
+            width: 37px;
+            height: 40px;
+            background:url(like_it.jpg) left center no-repeat;
+            cursor: pointer;
+            border:none;
+        }
+        #like{
+            background:url(../images/like_it.jpg) left center no-repeat;
+        }
+        #dislike{
+            background:url(../images/dont_like.jpg) left center no-repeat;
+        }
+        #likeForm, #dislikeForm{
+            display: inline-block;
+            border: 1px solid #919090;
+            border-radius: 5px;
+            padding:3px;
+            margin-right:10px;
+            vertical-align: middle;
+            text-align: center;
+            font-family: "Calibri", Verdana, Arial, sans-serif;
+            font-size:16px;
+            cursor: pointer;
+        }
+        #likeForm{
+            color:#F16C65;
+        }
+        #dislikeForm{
+            color:#919090;
+		}
 	
 /* ******************* INSIDE ALBUM ******************* */
 #view-album{
