--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,54 +32,68 @@ header{
 	vertical-align:top;
 }
 #logoarea{
-	display:block;
-	width:40%;
-	padding-top:35px;
-	padding-left:35px;
-	padding-bottom:32px;
+	display:inline-block;	
+	padding:32px 32px 31px 35px;
+	box-sizing:border-box;		
 	float:left;
 }
-#logoarea a{
-	display:block;
-	width:209px;
-	height:33px;
-}
 
-#search-form{
-	display:block;
-	width:40%;
-	height:30px;
-	padding-top:6px;
-	padding-right:34px;
-	text-align:right;
+#logoarea a{
+	display:block;	
+}
+#header-area-right{
+	display:inline-block;
+	box-sizing:border-box;	
 	float:right;
+	width:auto;
+	height:100px;
+	padding:32px 32px 31px 0;	
+}
+#search-form{
+	display:inline-block;	
+	text-align:right;
+	float:left;
+	padding:0;
+	margin-right:0.4rem;
+	color:#CCCCCC;
+	padding:0.4rem 0 0.3rem 0.4rem;	
+	background-color:#1B1F2E;
+	border:1px solid rgba(255,255,255,0.1);
+	border-radius:6px;
 }
 #search-form input{
 	display:inline-block;
-	width:150px;
-	padding:2px;
-	font-size:0.9em;
-	color:#CCCCCC;
-	background-color:#393b48;
-	border:1px solid #8088A3;
+	width:85%;	
+	float:left;	
+	font-size:0.95rem;
+	color:#6A738F;	
+	border:none;
+	background-color:#1B1F2E;
+	outline:none;	
 }
-#search-form button{
-	display:inline-block;
-	font-size:0.9em;
+#search-form input[type="submit"]{
+	background:transparent url(../img/search-icon.png) no-repeat scroll 0 0;
+	display:inline-block;	
+	color: transparent;
 	border:0;
-	color:#8088A3;
-	background-color:#2D2F3B;
+	border-style: none;   
+	width:22px;
+	height:22px;
+	float:left;	
 	cursor:pointer;
+	opacity:0.7;
+	overflow:hidden;
 }
 #search-form button:hover{
 	color:#CCC;
 }
 
 #menu{
-	display:block;
+	display:inline-block;
 	width:auto;
-	padding-right:32px;
+	margin:0;
 	float:right;
+	box-sizing:border-box;
 }
 #menu #nav-menu{
 	list-style:none inside none;
@@ -89,7 +103,7 @@ header{
 }
 #menu #nav-menu li{
 	display:block;
-	margin:0 4px;
+	margin:0 3px;
 	justify-content:flex-end;
 }
 #menu #nav-menu a{
@@ -98,7 +112,7 @@ header{
 	line-height:1;
 	color:#8088A3;
 	border:1px solid #8088A3;
-	border-radius:6px 6px 6px 6px;
+	border-radius:6px;
 	font-size:1.13em;
 	text-decoration:none;
 }
@@ -113,26 +127,29 @@ header{
 	border:1px solid #FFFFFF !important;
 	text-decoration:none;
 }
-
-#menu #nav-menu li#nav-profile a{
-	line-height:1.4 !important;
-	color:#F16C65;
-	border:0 !important;
-}
-#menu #nav-menu li#nav-profile a img{
-	position:relative;
-	top:-5px;
-	margin-right:10px;
+#menu #nav-menu li#profile-links ul li#nav-profile,
+#menu #nav-menu li#profile-links ul li#nav-myalbums{
+	display:inline-block;
 	float:left;
 }
-#menu #nav-menu li#nav-profile a:hover{
-	text-decoration:underline;
-}
-#menu #nav-menu li#nav-myalbums a{
+#menu #nav-menu li#profile-links ul li#nav-profile a,
+#menu #nav-menu li#profile-links ul li#nav-myalbums a{
 	line-height:1.4 !important;
 	color:#F16C65;
+	padding:6px 10px;
+	font-size:0.9rem;
+	background-color:#1B1F2E;
 	border:0 !important;
 }
+#menu #nav-menu li#profile-links ul li#nav-profile a img{
+	position:relative;
+	margin-right:0.2rem;
+	float:left;
+}
+#menu #nav-menu li#profile-links ul li#nav-profile a:hover{
+	text-decoration:underline;
+}
+
 /* ********************** CONTENT ***************************** */
 section.contentblock{
 	display:block;
@@ -217,9 +234,9 @@ footer{
 	display:block;
 	width:100%;
 	min-width:1000px;
-	height:5rem;	
+	height:6rem;	
 	font-size:1.13em;	
-	padding:1.2rem 2rem;
+	padding:1.5rem 2rem;
 	color:#676B80;
 	background-color:#2D2F3B;
 	box-sizing:border-box;	
