--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -165,6 +165,23 @@ section.contentblock{
 	background-color:#FFF;
 	text-align:center;
 	vertical-align:top;
+	box-sizing:border-box;
+	padding-bottom:1rem;
+}
+
+#paging a{	
+	font-size:0.9rem;
+	background-color:#B6B7BF;
+	padding:0.2rem 0.6rem;
+	margin-right:1px;	
+	color:white;
+}
+section.contentblock #paging a.sel{
+	background-color:#999;
+}
+#paging a:hover{	
+	background-color:#F16C65;
+	text-decoration:none;		
 }
 
 .errormsg{
@@ -189,7 +206,6 @@ section.contentblock{
 .backmsg a{
 	color:#FFF;
 }
-
 
 form.frm{
 	display:block;
