--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -5,6 +5,19 @@
 	background-color:#F16C65;
 }
 
+#profile #profile-form-logout a{
+	display: inline-block;
+	padding: 7px 18px;
+	line-height: 1;
+	color: #FFFFFF;
+	border: 1px solid #FFFFFF;
+	border-radius: 6px;
+	background-color: #F16C65;
+	font-size: 1.2em;
+	text-decoration: none;
+	cursor: pointer;
+}
+
 /* ********************** REGISTRATION FORM ********************** */
 #profile-form{
 	width:690px;
